@@ -1,3 +1,8 @@
+2010-01-15  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/commands/jump-or-exec.jl: added a modified version of jump-or-exec,
+	                                            which supports both matching against WM_NAME
+						    and WM_CLASS
+
 2010-01-12  Teika Kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/state/maximize.jl
 	* man/news.texi
